# barprep-edge-os

./: .env.example  .gitignore  APPLY_PATCH.md  CHANGELOG.md  LICENSE  README.md  install.sh  patch-manifest.json  pyproject.toml  release-manifest.json  repository-manifest.json
.github/workflows/: test.yml
docs/: API_V1.md  BARPREP_CORE_PRINTING_EDGE.md  DEVELOPMENT.md  EDGE_SPECIFICATION.md  MILESTONE_2_HELLO_EDGE.md  MILESTONE_4_APPLIANCE_FEATURES.md  RELEASE_0.2.0.md  RELEASE_0.2.1.md  RELEASE_0.2.2.md  RELEASE_0.3.0.md  ROADMAP.md
files/: pairing.py  patch_edge.py
image/: README.md
installer/: 99-barprep-brother.rules  barprep-edge-wifi.service  barprep-edge.service  install.sh  set-appliance-hostname.sh
patches/: templates_pairing.txt  web_app_pairing.txt
runtime/barprep_edge/: activity.py  appliance.py  capabilities.py  config.py  diagnostics.py  main.py  models.py  network.py  pairing.py  service.py  state.py  system_info.py  wifi.py  wifi_watchdog.py
runtime/barprep_edge/drivers/: __init__.py  base.py  brother_compat.py  brother_ql.py
runtime/barprep_edge/web/: app.py  templates.py
scripts/: dev-run.sh  test.sh
tests/: test_appliance.py  test_brother_compat.py  test_brother_discovery.py  test_capabilities.py  test_driver_print.py  test_models.py  test_network.py  test_pairing.py  test_pairing_request.py  test_state.py  test_system_info.py  test_test_label.py  test_web.py  test_web_printer_serialization.py
