[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barprep-edge-os"
version = "0.1.0.dev0"
description = "Appliance runtime for BarPrep Edge devices"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Sean Stewart" }
]
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "Pillow>=11,<12",
  "brother-ql>=0.9.4,<1",
  "pyusb>=1.3,<2",
  "zeroconf>=0.146,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.11,<1",
  "mypy>=1.15,<2",
  "types-Pillow"
]

[project.scripts]
barprep-edge = "barprep_edge.main:main"

[tool.setuptools]
package-dir = {"" = "runtime"}

[tool.setuptools.packages.find]
where = ["runtime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["barprep_edge"]
mypy_path = "runtime"
